--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,13 @@ jobs:
 
     
 
-    - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@1.64.0 # Don't use @master or @v1 unless you're happy to test the latest version
-      env:
-        INITIAL_VERSION: '0.7.0'
-        GITHUB_TOKEN: ${{ secrets.TOKEN }} # if you don't want to set write permissions use a PAT token
-        DEFAULT_BUMP: patch
-        WITH_V: true
+    # - name: Bump version and push tag
+    #   uses: anothrNick/github-tag-action@1.64.0 # Don't use @master or @v1 unless you're happy to test the latest version
+    #   env:
+    #     INITIAL_VERSION: '0.7.0'
+    #     GITHUB_TOKEN: ${{ secrets.TOKEN }} # if you don't want to set write permissions use a PAT token
+    #     DEFAULT_BUMP: patch
+    #     WITH_V: true
 
     # - name: Create Tag
     #   uses: actions/github-script@v6
